# atsbindings

./: README.md  pyproject.toml
atsbindings/: __init__.py  bindings.py  board_specific_info.py  board_specific_info.toml  core.py  enumerations.py
examples/: acquisition.py  blink_led.py  blinky_led.py  get_board_specific_info.py  traditional_acquisition.py
scripts/: update_bsi_file.py
tests/: test_logic.py
